feat: Integrate Supabase for data management
Replaces placeholder data and internal API calls with Supabase for persistent data storage and retrieval.
Adds `@supabase/supabase-js` dependency.
Updates `index.html` to load Supabase client dynamically.
Removes static data constants.
Adjusts `ManagementView` to handle user password updates correctly.
Modifies `ReportParticipationView` to prepare records for Supabase insertion without client-generated IDs.
Switches `App.tsx` to use `supabaseService` and manages Supabase authentication session.
Updates project name in `package.json` and `metadata.json`.
Updates `README.md` with a new AI Studio app link.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hệ-thống-quản-lý-tham-gia-hoạt-động-thpt-hướng-hóa",
+  "name": "copy-of-hệ-thống-quản-lý-tham-gia-hoạt-động-thpt-hướng-hóa",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "@supabase/supabase-js": "2.44.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
